--- a/docker/vget/Dockerfile
+++ b/docker/vget/Dockerfile
@@ -1,11 +1,9 @@
 # vget Docker Image
-# Single image for all users - runtime GPU detection determines behavior:
-#   - With NVIDIA GPU (--gpus all): Local transcription, download models on demand
-#   - Without GPU: Cloud API mode (OpenAI Whisper, Groq, etc.)
-#
 # Build args:
-#   ENABLE_CUDA=true  - amd64 builds (includes CUDA runtime for GPU support)
-#   ENABLE_CUDA=false - arm64 builds (no NVIDIA GPUs available)
+#   ENABLE_CUDA=true  - amd64 builds with CUDA GPU support
+#   ENABLE_CUDA=false - arm64 builds (CPU only)
+#
+# Runtime: App detects GPU and enables AI features only if GPU is available
 
 ARG ENABLE_CUDA=false
 
@@ -17,17 +15,18 @@ RUN npm ci
 COPY ui/ ./
 RUN npm run build
 
-# Build stage for Go binary with sherpa-onnx + whisper.cpp
-FROM golang:1.25-bookworm AS go-builder-false
-FROM nvidia/cuda:12.6.3-devel-ubuntu24.04 AS go-builder-true
+# Go builder stage
+FROM golang:1.25-bookworm AS go-builder-base
+FROM nvidia/cuda:12.6.3-devel-ubuntu24.04 AS go-builder-cuda
 
 ARG ENABLE_CUDA=false
-FROM go-builder-${ENABLE_CUDA} AS go-builder
+FROM go-builder-cuda AS go-builder-select-true
+FROM go-builder-base AS go-builder-select-false
+FROM go-builder-select-${ENABLE_CUDA} AS go-builder
 
-# Re-declare ARG after FROM
 ARG ENABLE_CUDA=false
 
-# Install Go for CUDA image (already present in golang image)
+# Install Go for CUDA image
 RUN if [ "$ENABLE_CUDA" = "true" ]; then \
         apt-get update && apt-get install -y --no-install-recommends \
             wget ca-certificates && \
@@ -47,19 +46,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     && rm -rf /var/lib/apt/lists/*
 
-# sherpa-onnx version (for Parakeet)
+# sherpa-onnx
 ARG SHERPA_VERSION=1.12.20
 
-# Download sherpa-onnx headers from source
 RUN curl -L "https://github.com/k2-fsa/sherpa-onnx/archive/refs/tags/v${SHERPA_VERSION}.tar.gz" | tar -xzf - && \
     cp sherpa-onnx-${SHERPA_VERSION}/sherpa-onnx/c-api/c-api.h /usr/local/include/ && \
     cp sherpa-onnx-${SHERPA_VERSION}/sherpa-onnx/c-api/cxx-api.h /usr/local/include/ && \
     rm -rf sherpa-onnx-${SHERPA_VERSION}
 
-# Download and install pre-built sherpa-onnx shared libraries
 ARG TARGETARCH
 RUN if [ "$ENABLE_CUDA" = "true" ]; then \
-        echo "Downloading sherpa-onnx CUDA version..." && \
         curl -L "https://github.com/k2-fsa/sherpa-onnx/releases/download/v${SHERPA_VERSION}/sherpa-onnx-v${SHERPA_VERSION}-cuda-12.x-cudnn-9.x-linux-x64-gpu.tar.bz2" | tar -xjf - && \
         cp sherpa-onnx-v${SHERPA_VERSION}-cuda-12.x-cudnn-9.x-linux-x64-gpu/lib/*.so* /usr/local/lib/ && \
         rm -rf sherpa-onnx-v${SHERPA_VERSION}-cuda-12.x-cudnn-9.x-linux-x64-gpu; \
@@ -77,10 +73,9 @@ RUN if [ "$ENABLE_CUDA" = "true" ]; then \
     fi && \
     ldconfig
 
-# whisper.cpp commit (must match Go bindings in go.mod)
+# whisper.cpp
 ARG WHISPER_COMMIT=6114e692136b
 
-# Build whisper.cpp from source with shared library
 RUN git clone https://github.com/ggerganov/whisper.cpp /tmp/whisper.cpp && \
     cd /tmp/whisper.cpp && git checkout ${WHISPER_COMMIT} && \
     if [ "$ENABLE_CUDA" = "true" ]; then \
@@ -107,39 +102,31 @@ RUN git clone https://github.com/ggerganov/whisper.cpp /tmp/whisper.cpp && \
     rm -rf /tmp/whisper.cpp && \
     ldconfig
 
-# Set environment variables for CGO
+WORKDIR /app
+
+COPY go.mod go.sum ./
+RUN go mod download
+
+COPY . .
+COPY --from=ui-builder /app/ui/dist ./internal/server/dist
+
+# Build with CGO for whisper.cpp/sherpa-onnx bindings
 ENV CGO_ENABLED=1
 ENV LD_LIBRARY_PATH=/usr/local/lib
 ENV C_INCLUDE_PATH=/usr/local/include
 ENV LIBRARY_PATH=/usr/local/lib
 
-WORKDIR /app
-
-# Copy go mod files first for caching
-COPY go.mod go.sum ./
-RUN go mod download
-
-# Copy source code
-COPY . .
-
-# Copy built UI into embed location
-COPY --from=ui-builder /app/ui/dist ./internal/server/dist
-
-# Build the server binary with CGO enabled
 RUN go build -ldflags="-s -w" -o /vget-server ./cmd/vget-server
 
-# Final runtime stage
-FROM debian:bookworm-slim AS runtime-false
-FROM nvidia/cuda:12.6.3-runtime-ubuntu24.04 AS runtime-true
+# Runtime stage
+FROM debian:bookworm-slim AS runtime-base
+FROM nvidia/cuda:12.6.3-runtime-ubuntu24.04 AS runtime-cuda
 
 ARG ENABLE_CUDA=false
-FROM runtime-${ENABLE_CUDA} AS runtime
+FROM runtime-cuda AS runtime-select-true
+FROM runtime-base AS runtime-select-false
+FROM runtime-select-${ENABLE_CUDA} AS runtime
 
-# No models bundled - downloaded on demand at runtime
-# GPU users: download from HuggingFace or vmirror (China)
-# No GPU: use cloud API (OpenAI Whisper, Groq, etc.)
-
-# Install runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
     chromium \
@@ -155,49 +142,34 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     bzip2 \
     && rm -rf /var/lib/apt/lists/*
 
-# Install yt-dlp and youtube-dl
 RUN pip3 install --no-cache-dir --break-system-packages \
     yt-dlp \
     youtube-dl
 
-# Create non-root user (handle case where UID/GID 1000 already exists)
 RUN (getent group 1000 >/dev/null || groupadd -g 1000 vget) && \
     (id -u 1000 >/dev/null 2>&1 || useradd -u 1000 -g 1000 -m -d /home/vget vget) && \
     mkdir -p /home/vget/downloads /home/vget/.config/vget /home/vget/models && \
     chown -R 1000:1000 /home/vget
 
-# Copy sherpa-onnx shared libraries from builder
+# Copy AI libraries
 COPY --from=go-builder /usr/local/lib/libsherpa-onnx-*.so* /usr/local/lib/
 COPY --from=go-builder /usr/local/lib/libonnxruntime*.so* /usr/local/lib/
-
-# Copy whisper.cpp shared libraries from builder
 COPY --from=go-builder /usr/local/lib/libwhisper*.so* /usr/local/lib/
 COPY --from=go-builder /usr/local/lib/libggml*.so* /usr/local/lib/
 RUN ldconfig
 
-# Models are downloaded on demand at runtime via:
-#   vget ai download whisper-large-v3-turbo
-#   vget ai download whisper-large-v3-turbo --from=vmirror  (for China)
-
-# Copy binary from builder
 COPY --from=go-builder /vget-server /usr/local/bin/vget-server
 
-# Tell rod to use system chromium instead of downloading
 ENV ROD_BROWSER=/usr/bin/chromium
 ENV LD_LIBRARY_PATH=/usr/local/lib
-
-# For CUDA: set NVIDIA visible devices
 ENV NVIDIA_VISIBLE_DEVICES=all
 ENV NVIDIA_DRIVER_CAPABILITIES=compute,utility
 
-# Copy entrypoint script
 COPY docker/vget/entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 WORKDIR /home/vget
-
 EXPOSE 8080
-
 VOLUME ["/home/vget/downloads", "/home/vget/.config/vget"]
 
 ENTRYPOINT ["entrypoint.sh"]
