--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,16 @@ jobs:
         with:
           go-version-file: go.mod
 
-      - name: Create placeholder for embed
-        run: mkdir -p internal/server/dist && touch internal/server/dist/.gitkeep
+      - name: Create placeholders for embed
+        run: |
+          mkdir -p internal/server/dist && touch internal/server/dist/.gitkeep
+          mkdir -p internal/core/ai/transcriber/bin
+          touch internal/core/ai/transcriber/bin/whisper-darwin-arm64
+          touch internal/core/ai/transcriber/bin/whisper-windows-amd64.exe
+          touch internal/core/ai/transcriber/bin/whisper-linux-amd64
+          touch internal/core/ai/transcriber/bin/sherpa-darwin-arm64
+          touch internal/core/ai/transcriber/bin/sherpa-windows-amd64.exe
+          touch internal/core/ai/transcriber/bin/sherpa-linux-amd64
 
       - name: Run tests
         run: CGO_ENABLED=0 go test -v ./...
@@ -35,8 +43,16 @@ jobs:
         with:
           go-version-file: go.mod
 
-      - name: Create placeholder for embed
-        run: mkdir -p internal/server/dist && touch internal/server/dist/.gitkeep
+      - name: Create placeholders for embed
+        run: |
+          mkdir -p internal/server/dist && touch internal/server/dist/.gitkeep
+          mkdir -p internal/core/ai/transcriber/bin
+          touch internal/core/ai/transcriber/bin/whisper-darwin-arm64
+          touch internal/core/ai/transcriber/bin/whisper-windows-amd64.exe
+          touch internal/core/ai/transcriber/bin/whisper-linux-amd64
+          touch internal/core/ai/transcriber/bin/sherpa-darwin-arm64
+          touch internal/core/ai/transcriber/bin/sherpa-windows-amd64.exe
+          touch internal/core/ai/transcriber/bin/sherpa-linux-amd64
 
       - name: Run staticcheck
         uses: dominikh/staticcheck-action@v1
