--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -204,7 +204,7 @@ jobs:
           build-args: ENABLE_CUDA=true
           outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
           cache-from: type=gha,scope=amd64
-          cache-to: type=gha,scope=amd64,mode=max
+          cache-to: type=gha,scope=amd64,mode=min
 
   docker-arm64:
     if: ${{ !contains(github.ref_name, '-') }}
@@ -234,7 +234,7 @@ jobs:
           platforms: linux/arm64
           outputs: type=image,name=ghcr.io/${{ github.repository }},push-by-digest=true,name-canonical=true,push=true
           cache-from: type=gha,scope=arm64
-          cache-to: type=gha,scope=arm64,mode=max
+          cache-to: type=gha,scope=arm64,mode=min
 
   docker-manifest:
     if: ${{ !contains(github.ref_name, '-') }}
