--- a/docker/vget-base/Dockerfile
+++ b/docker/vget-base/Dockerfile
@@ -1,5 +1,5 @@
 # vget Base Image for CUDA builds
-# Contains pre-built whisper.cpp and sherpa-onnx libraries
+# Contains pre-built whisper.cpp library
 # Built bi-weekly via build-base-images.yml workflow
 
 FROM nvidia/cuda:12.6.3-devel-ubuntu24.04
@@ -21,19 +21,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     git \
     && rm -rf /var/lib/apt/lists/*
-
-# sherpa-onnx
-ARG SHERPA_VERSION=1.12.20
-
-RUN curl -L "https://github.com/k2-fsa/sherpa-onnx/archive/refs/tags/v${SHERPA_VERSION}.tar.gz" | tar -xzf - && \
-    cp sherpa-onnx-${SHERPA_VERSION}/sherpa-onnx/c-api/c-api.h /usr/local/include/ && \
-    cp sherpa-onnx-${SHERPA_VERSION}/sherpa-onnx/c-api/cxx-api.h /usr/local/include/ && \
-    rm -rf sherpa-onnx-${SHERPA_VERSION}
-
-RUN curl -L "https://github.com/k2-fsa/sherpa-onnx/releases/download/v${SHERPA_VERSION}/sherpa-onnx-v${SHERPA_VERSION}-cuda-12.x-cudnn-9.x-linux-x64-gpu.tar.bz2" | tar -xjf - && \
-    cp sherpa-onnx-v${SHERPA_VERSION}-cuda-12.x-cudnn-9.x-linux-x64-gpu/lib/*.so* /usr/local/lib/ && \
-    rm -rf sherpa-onnx-v${SHERPA_VERSION}-cuda-12.x-cudnn-9.x-linux-x64-gpu && \
-    ldconfig
 
 # whisper.cpp with CUDA
 ARG WHISPER_VERSION=1.8.2
