feat: add Twitter media extraction support and open output folder command

--- a/tauri/src-tauri/Cargo.toml
+++ b/tauri/src-tauri/Cargo.toml
@@ -31,5 +31,6 @@ dirs = "6"
 uuid = { version = "1", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 url = "2"
+urlencoding = "2"
 regex = "1"
 thiserror = "1"
